<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="402dp"
            android:layout_height="wrap_content"
            android:text="@string/feedbacktitle"
            android:textSize="24sp"></TextView>
        <EditText
            android:id="@+id/EditTextName"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackname"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackemail"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent">
        </EditText>

        <Spinner
            android:id="@+id/SpinnerFeedbackType"
            android:layout_height="wrap_content"
            android:prompt="@string/feedbacktype"
            android:layout_width="fill_parent"
            android:entries="@array/feedbacktypelist">
        </Spinner>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:onClick="showDatePickerDialog" />
        <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/feedbackbody"
            android:inputType="textMultiLine"
            android:lines="4"
            android:layout_width="match_parent">
        </EditText>
        <CheckBox
            android:id="@+id/CheckBoxResponse"
            android:layout_height="wrap_content"
            android:text="@string/feedbackresponse"
            android:layout_width="fill_parent">
        </CheckBox>

        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="wrap_content"
            android:text="@string/feedbackbutton"
            android:onClick="sendFeedback"
            android:layout_width="match_parent">
        </Button>

        <!--Put form controls here-->
    </LinearLayout>

</ScrollView>
